Update README.md to reflect project scope and features: Expanded the documentation to provide a comprehensive overview of the custom programming language implementation, including detailed sections on language features, architecture, installation, and examples. Enhanced clarity and organization with a new table of contents and improved descriptions of core functionalities.